promote to main (#1)
* db connection created

* account api pt.1

* feat: payment added

* fix: code refactor

* feat: transactions paginated

* feat: logout && pdf download

* feat: pdf

* feat: polizze api
