# src/routes/AuthRoutes.ts
@@ -5,36 +5,11 @@ const router = Router();
 const authController = new AuthController();
 
 /**
- * @swagger
- * /api/auth/login:
- *   post:
- *     summary: Effettua il login
- *     description: Ritorna un token JWT se le credenziali sono corrette.
- *     tags: [Auth]
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               username:
- *                 type: string
- *               password:
- *                 type: string
- *     responses:
- *       200:
- *         description: Login effettuato con successo
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 token:
- *                   type: string
- *       401:
- *         description: Credenziali non valide
+ * POST /api/auth/register
+ * POST /api/auth/login
  */
+router.post("/register", authController.register);
 router.post("/login", authController.login);
+router.post("/logout", authController.logout);
 
 export default router;
